test/attr/ApplicationMain/attr_UIApplicationMain_not_UIApplicationDelegate.code
// RUN: %target-language-frontend(mock-sdk: %clang-importer-sdk) -typecheck -parse-as-library -verify %s
// RUN: %target-language-frontend(mock-sdk: %clang-importer-sdk) -typecheck -parse-as-library -enable-upcoming-feature DeprecateApplicationMain -verify -verify-additional-prefix deprecated- %s

// REQUIRES: objc_interop
// REQUIRES: language_feature_DeprecateApplicationMain

import UIKit

@UIApplicationMain // expected-error{{'UIApplicationMain' class must conform to the 'UIApplicationDelegate' protocol}}
// expected-deprecated-warning@-1 {{'UIApplicationMain' is deprecated; this is an error in the Codira 6 language mode}}
// expected-deprecated-note@-2 {{use '@main' instead}} {{1-19=@main}}
class MyNonDelegate {
}
